implemented static map retrieval functions and allows display of map